syntax="proto3";

package greet;
option go_package="greetpb";

message Greeting{
    string First_Name=1;
    string Last_Name=2;
}

message GreetRequest{
    Greeting Greeting=1;
}
message GreetResponse{
    string Result=1;
}

message GreetManyTimesRequest{
    Greeting Greeting=1;
}

message GreetManyTimesResponse{
    string Result=1;
}

message GreetEveryOneRequest{
    Greeting Greeting=1;
}

message GreetEveryOneResponse{
    string Result=1;
}



service GreetService{

    rpc Greet(GreetRequest) returns(GreetResponse) {};
    rpc GreatManyTimes(GreetManyTimesRequest) returns(stream GreetManyTimesResponse) {};
    rpc GreetEveryOne(stream GreetEveryOneRequest) returns (stream GreetEveryOneResponse) {};
}
